# fastapi-sls-tester

./: .gitignore  .tool-versions  Makefile  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
app/: main.py
infra/live/dev/: config.tf  locals.tf  main.tf  terraform.tfvars.example  variables.tf
infra/modules/apigw/: locals.tf  main.tf  outputs.tf  variables.tf
infra/modules/lambda/: data.tf  locals.tf  main.tf  outputs.tf  package_lambda.sh  variables.tf
infra/modules/layer/: data.tf  locals.tf  main.tf  package_layer.sh  variables.tf
tests/: test_app.py
